# MySQL

./: README.md
SQLTest/: CMakeLists.txt  main.cpp
ServerBasic/: readme.md
ServerBasic/lession01_LinuxBasic/: readme.md
ServerBasic/lession01_LinuxBasic/lession010_virtualptr/: readme.md
ServerBasic/lession01_LinuxBasic/lession011_file/: readme.md
ServerBasic/lession01_LinuxBasic/lession012_linuxIO/: readme.md
ServerBasic/lession01_LinuxBasic/lession013_ls-l/: ls  ls-l.c
ServerBasic/lession01_LinuxBasic/lession014_filemode/: access  access.c  chmod  chmod.c  chown.c  truncate  truncate.c
ServerBasic/lession01_LinuxBasic/lession015_dirmode/: chdir  chdir.c  mkdir  mkdir.c  rename  rename.c
ServerBasic/lession01_LinuxBasic/lession016_dir_view/: readFileNum  readFileNum.c  readme.md
ServerBasic/lession01_LinuxBasic/lession017_dup/: dup  dup.c  dup2  dup2.c
ServerBasic/lession01_LinuxBasic/lession018_fcntl/: fcntl  fcntl.c
ServerBasic/lession01_LinuxBasic/lession02_gcc/: gcc.md
ServerBasic/lession01_LinuxBasic/lession03_static_lib/: static_lib.md
ServerBasic/lession01_LinuxBasic/lession04_use_static_lib/: use_static_lib.md
ServerBasic/lession01_LinuxBasic/lession05_nonstatic_lib/: nonstatic.md
ServerBasic/lession01_LinuxBasic/lession07_makefile/: Makefile  (+6 more)
UnityServer/: CMakeLists.txt  MySQLManager.cpp  MySQLManager.h  Server.cpp  main.cpp  pointcloud.pb.cc  pointcloud.pb.h  test.pb.h
UnityServerStr/: CMakeLists.txt  MySQLManager.cpp  MySQLManager.h  Server.h  main.cpp  pointcloud.pb.cc  pointcloud.pb.h  test.pb.cc  translate.cpp  translate.h
(+202 files in other folders)
