cmake_minimum_required(VERSION 2.8.0)
project(Server)
add_definitions(-std=c++11)
include(FindProtobuf)
set(CMAKE_CXX_FLAGS "-pthread")
add_executable(Server main.cpp MySQLManager.cpp Server.cpp translate.cpp test.pb.h test.pb.cc pointcloud.pb.cc pointcloud.pb.h)
target_link_libraries(${PROJECT_NAME} libmysqlclient.so ${PROTOBUF_LIBRARIES})